--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "pg": "^8.8.0",
     "typeorm": "^0.3.9"
